--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>VueJs + Webpack 4 template</title>
-  <link href="main.css" rel="stylesheet"></head>
-  <body>
-    <div id="app"></div>
-  <script type="text/javascript" src="vendor.js"></script><script type="text/javascript" src="main.js"></script></body>
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  <title>Broadlink tools</title>
+<link href="main.css" rel="stylesheet"></head>
+
+<body>
+  <div id="app"></div>
+<script type="text/javascript" src="vendor.js"></script><script type="text/javascript" src="main.js"></script></body>
+
 </html>
