--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <title>Broadlink tools</title>
+  <title>Broadlink tools by Keite Trần</title>
 <link href="main.css" rel="stylesheet"></head>
 
 <body>
