--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <title>Broadlink tools by Keite Trần</title>
+  <title>Broadlink tools by Keite Trần & unclehook</title>
 </head>
 
 <body>
